navbar z-index fix

--- a/milestone-3/frontend/src/components/navbar.css
+++ b/milestone-3/frontend/src/components/navbar.css
@@ -5,15 +5,15 @@
     top: 0;
     left: 0;
     right: 0;
-    /* transition: all 0.3s ease-in-out; */
-    /* z-index: 1; */
+    transition: all 0.3s ease-in-out;
+    z-index: 1;
 }
 
 .nav .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* transition: all 0.3s ease-in-out; */
+    transition: all 0.3s ease-in-out;
 }
 
 nav ul{
@@ -27,7 +27,7 @@ nav ul{
     color:#fff;
     text-decoration: none;
     padding: 7px 15px;
-    /* transition: all 0.3s ease-in-out; */
+    transition: all 0.3s ease-in-out;
     font-weight: bold;
 }
 
